fix: actually work on 1.20 forge and 1.21 neoforge